5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1716_2496.log
== TEST (2019-05-09 17:03:19) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+1)
	print(soma)
var=int(input("Numero inteiro:"))
-- OUTPUT:
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
-524
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:03:54) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+1)
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-524
1076
334
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:23) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:36) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:44) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1575
3225
999
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:55) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1575
3225
999
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:46) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+1)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1049
2151
667
-17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:07) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+1)
	result=(var+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:32) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+1)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1049
2151
667
-17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:12:04) 
-- CODE:
var=int(input("Numero inteiro:"))
x=1
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1049
2151
667
-17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:13:29) 
-- CODE:
var=int(input("Numero inteiro:")
		  
while (var!=-1):
	soma=(var+var)
	resul(soma+1)
	var=int(input("Numero inteiro:"))
-- ERROR:
File "XXXX", line 3
    while (var!=-1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:14:26) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	result=(soma+1)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1049
2151
667
-17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:14:51) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1575
3225
999
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:39) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:55) 
-- CODE:
var=int(input("Numero inteiro:"))

while (var!=-1):
	soma=(var+var)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:17) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:46) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:19:00) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:20:18) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:20:27) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- EXECUTION TIME:
0.222153
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-1050
2150
666
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21906
65306
-21906
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:20:35) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+x)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:21:51) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
while (var!=-1):
	soma=(var+soma)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma=(var+soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:22:16) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	result=(soma+var)
	print(result)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-1050
1625
1216
865
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:22:52) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:23:02) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- EXECUTION TIME:
0.232852
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:23:07) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:23:18) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- EXECUTION TIME:
0.12519
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:23:24) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:24:03) 
-- CODE:
var=int(input("Numero inteiro:"))
x=0
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- EXECUTION TIME:
0.165087
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:27:30) 
-- CODE:
var=int(input("Numero inteiro:"))
soma=0
while (var!=-1):
	soma=(var+soma)
	
	print(soma)
	
	var=int(input("Numero inteiro:"))
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:28:57) 
-- CODE:
var=int(input("Numero inteiro:"))
soma=0
while (var!=-1):
	soma=(var+soma)
	
	var=int(input("Numero inteiro:"))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:29:06) 
-- CODE:
var=int(input("Numero inteiro:"))
soma=0
while (var!=-1):
	soma=(var+soma)
	
	var=int(input("Numero inteiro:"))
print(soma)
-- EXECUTION TIME:
0.180771
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
